# model/dto/play.go
@@ -2,14 +2,6 @@ package dto
 
 import "time"
 
-type PlayStatu int
-
-const (
-	PlayStatusBefore PlayStatu = iota
-	PlayStatusDuring
-	PlayStatusAfter
-)
-
 type PlayInsertReq struct {
 	PlayName        string    `json:"play_name" binding:"required"`
 	PlayDescription string    `json:"play_description" binding:"required"`
@@ -25,7 +17,6 @@ type PlayUpdateReq struct {
 	PlayStartTime   time.Time `json:"play_start_time" binding:"required"`
 	PlayEndTime     time.Time `json:"play_end_time" binding:"required"`
 	PlayPrice       float64   `json:"play_price" binding:"required"`
-	PlayStatu       PlayStatu `json:"play_statu" binding:"required"`
 }
 
 type PlayListResp struct {
@@ -39,5 +30,4 @@ type PlayInfoResp struct {
 	PlayStartTime   time.Time `json:"play_start_time"`
 	PlayEndTime     time.Time `json:"play_end_time"`
 	PlayPrice       float64   `json:"play_price"`
-	PlayStatu       PlayStatu `json:"play_statu"`
 }
